--- a/chat_gui.ipynb
+++ b/chat_gui.ipynb
@@ -106,8 +106,8 @@
     "        \n",
     "    return instructions\n",
     "\n",
-    "prompt_builder = CommandRPromptBuilder(\n",
-    "    reload_instruction(\"system_prompt_template/cmdr_sys_ppt_gen_16.txt\"), \n",
+    "prompt_builder = Llama3PromptBuilder(\n",
+    "    reload_instruction(\"system_prompt_template/l3_sys_ppt_gen_16.txt\"), \n",
     "    session.context\n",
     ")"
    ]
