--- a/chat_gui.ipynb
+++ b/chat_gui.ipynb
@@ -435,7 +435,7 @@
    "source": [
     "def export_log():\n",
     "    import datetime\n",
-    "    filename = str(datetime.datetime.now()).replace(' ', '_') + '.txt'\n",
+    "    filename = datetime.datetime.now().strftime("%Y-%m-%d-%H-%M-%S.txt")\n",
     "    with open(os.path.join(LOG_DIR, filename), 'w') as f:\n",
     "       f.writelines(str(session.context))\n",
     "        \n",
