--- a/chat_gui.ipynb
+++ b/chat_gui.ipynb
@@ -29,6 +29,39 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "dfa76e7b-03c2-40a7-92d7-16cb69c5d8e2",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def make_default_dirs() -> None:\n",
+    "    import os\n",
+    "    from global_settings import (\n",
+    "        GGUF_DIR, \n",
+    "        AGENT_WORKING_DIR, \n",
+    "        LOG_DIR, \n",
+    "        TTS_ASSET_ROOT, \n",
+    "        CACHE_DIR\n",
+    "    )\n",
+    "    default_dirs = [GGUF_DIR, AGENT_WORKING_DIR, LOG_DIR, TTS_ASSET_ROOT, CACHE_DIR]\n",
+    "    for directory in default_dirs:\n",
+    "        if os.path.isdir(directory):\n",
+    "            continue\n",
+    "        try:\n",
+    "            print(f\"Directory \\\"{directory}\\\" does not exsist. Creating.\")\n",
+    "            os.makedirs(directory)\n",
+    "        except FileExistsError as e:\n",
+    "            print(e)\n",
+    "            \n",
+    "make_default_dirs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "4ed8c855-4eab-4fd6-8d95-2149dbff4a81",
    "metadata": {
     "jupyter": {
@@ -60,31 +93,6 @@
     "import agent_tools as tools\n",
     "from global_settings import *\n",
     "from prompt_builders import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "dfa76e7b-03c2-40a7-92d7-16cb69c5d8e2",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def make_default_dirs() -> None:\n",
-    "    default_dirs = [GGUF_DIR, AGENT_WORKING_DIR, LOG_DIR, TTS_ASSET_ROOT, CACHE_DIR]\n",
-    "    for directory in default_dirs:\n",
-    "        if os.path.isdir(directory):\n",
-    "            continue\n",
-    "        try:\n",
-    "            print(f\"Directory \\\"{directory}\\\" does not exsist. Creating.\")\n",
-    "            os.makedirs(directory)\n",
-    "        except FileExistsError as e:\n",
-    "            print(e)\n",
-    "            \n",
-    "make_default_dirs()"
    ]
   },
   {
@@ -365,6 +373,11 @@
     "                    body += highlight(tool_input, Python3Lexer(), HtmlFormatter())\n",
     "                    body = text_template.format(content=body, color=AI_MESSAGE_BG_COLOR)\n",
     "                    return name + body\n",
+    "                else:\n",
+    "                    body = header(tool_name)\n",
+    "                    body += '<div style=\"background-color: #FFFFFF; color: black;\">' + tool_input + '</div>'\n",
+    "                    body = text_template.format(content=body, color=AI_MESSAGE_BG_COLOR)\n",
+    "                    return name + body\n",
     "            \n",
     "        def render_tool_agent_item(item) -> str:\n",
     "            name = f\"\"\"<div style=\"background-color: #999999; color: white; width: 15px; height: 15px; padding: 10px; border-radius: 5px 5px 0 0; text-align: center;\">{session.assistant_name[0]}</div>\"\"\"\n",
@@ -389,6 +402,15 @@
     "                    body += '<pre><code>' + stdout + '</code></pre>'\n",
     "                if caption:\n",
     "                    body += embed_image_to_tag(image_binary=image) + '</br>'\n",
+    "                body = text_template.format(content=body, color=AI_MESSAGE_BG_COLOR)\n",
+    "                return name + body\n",
+    "            else:\n",
+    "                body = header('Tool results')\n",
+    "                try:\n",
+    "                    output = str({k: v for k, v in tool_output.items() if k != \"input\"})\n",
+    "                except Exception as e:\n",
+    "                    output = \"Failed to convert tool output into text format. You need to handwrite the displaying pipeline.\"\n",
+    "                body += '<div style=\"background-color: #FFFFFF; color: black;\">' + output + '</div>'\n",
     "                body = text_template.format(content=body, color=AI_MESSAGE_BG_COLOR)\n",
     "                return name + body\n",
     "                \n",
@@ -1262,7 +1284,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06faa6ed95d641b09da0e4aa74707315",
+       "model_id": "69649ef72b2e49ff9897efee355fd544",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1276,7 +1298,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d4722f94f2e4b6d9e930f0610120a93",
+       "model_id": "2aff23e5023343588988b8a42bee9a5c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1290,7 +1312,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "679119181c6244ddaf6391e430f3a80e",
+       "model_id": "3c2f4ac2b0064ed780739c985ba54345",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1304,7 +1326,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f53a2a05b0f445ca91f1bd73297b2ded",
+       "model_id": "6690d13360254c999229640fb3f89466",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1318,7 +1340,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3d76ab2aecb4622a739f0d2da8e1cfa",
+       "model_id": "28d57c40a9e640d99c7e87505279dbf5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1332,7 +1354,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c7067be08904b6da0ea34fb6bd54af6",
+       "model_id": "44dfca4f65ab4c529a9cfa07a9f64235",
        "version_major": 2,
        "version_minor": 0
       },
