--- a/chat_gui.ipynb
+++ b/chat_gui.ipynb
@@ -1000,6 +1000,13 @@
     "        with open(os.path.join(LOG_DIR, filename), 'w') as f:\n",
     "           f.writelines(str(session.context))\n",
     "\n",
+    "    def run_tool_wrapper(name, input):\n",
+    "        try:\n",
+    "            with session.debug:\n",
+    "                return tools.run_tool(name, input)\n",
+    "        except RuntimeError as e:\n",
+    "            return str(e)\n",
+    "\n",
     "    if session.model == None:\n",
     "        model_not_loaded_error()\n",
     "        return\n",
@@ -1045,7 +1052,7 @@
     "            \"input\": response[\"tool_input\"],\n",
     "        }\n",
     "    })\n",
-    "\n",
+    "    \n",
     "    # Run tools.\n",
     "    push_context_wrapper({\n",
     "        \"role\": TOOL_AGENT_NAME,\n",
@@ -1053,7 +1060,7 @@
     "        \"tool\": {\n",
     "            \"action\": \"return\",\n",
     "            \"name\": response[\"tool\"],\n",
-    "            \"output\": tools.run_tool(response[\"tool\"], response[\"tool_input\"]),\n",
+    "            \"output\": run_tool_wrapper(response[\"tool\"], response[\"tool_input\"]),\n",
     "        }\n",
     "    })\n",
     "        \n",
@@ -1284,7 +1291,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69649ef72b2e49ff9897efee355fd544",
+       "model_id": "3a9639de1f6b49a085e56bc0917d6b72",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1298,7 +1305,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2aff23e5023343588988b8a42bee9a5c",
+       "model_id": "d40a9045b6d14a90a00528796a283281",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1312,7 +1319,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c2f4ac2b0064ed780739c985ba54345",
+       "model_id": "74b727f4295145978b56f75f8c877f5a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1326,7 +1333,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6690d13360254c999229640fb3f89466",
+       "model_id": "34f610e413ba48faa7e6d80fc671537d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1340,7 +1347,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28d57c40a9e640d99c7e87505279dbf5",
+       "model_id": "8c608e684d904250a29c1aff3b27a2f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1354,7 +1361,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44dfca4f65ab4c529a9cfa07a9f64235",
+       "model_id": "b0b11bf1394c48e5a812e0f06372d1b5",
        "version_major": 2,
        "version_minor": 0
       },
